--- a/sass/components/_sightseeing.scss
+++ b/sass/components/_sightseeing.scss
@@ -1,14 +1,15 @@
 .sightseeing {
     background-color: $color-primary-light;
-    padding-bottom: 4rem;
+    padding: 0 2rem;
 
-    @include respond(tab-port) {
-        padding-bottom: 0;
+    @include respond(desktop) {
+        height: 60rem;
     }
 }
 
 .sights {
     width: 100%;
+    height: 100%;
     position: relative;
 
     &__text {
@@ -23,6 +24,10 @@
             width: 70%;
             margin: 2rem;
         }
+
+        @include respond(desktop) {
+            padding: 2rem;
+        }
     }
 
     &__heading {
@@ -35,6 +40,10 @@
             font-size: 4rem;
             line-height: 1.2;
             width: 50%;
+        }
+
+        @include respond(desktop) {
+            padding: 0 8rem;
         }
     }
 
@@ -53,7 +62,11 @@
         background-size: cover;
         background-position: bottom;
         display: inline-block;
-        height: 30rem;
+        height: 40rem;
+
+        @include respond(desktop) {
+            height: 60rem;
+        }
 
         &--1 {
             background-image: url(../../img/sightseeing_1.jpg);
@@ -64,6 +77,11 @@
                 height: 20rem;
                 margin-top: 2rem;
                 background-position: center;
+            }
+
+            @include respond(desktop) {
+                height: 35rem;
+                transform: translateX(10%);
             }
         }
         &--2 {
@@ -77,6 +95,11 @@
                 position: absolute;
                 top: 0;
                 right: 0;
+            }
+
+            @include respond(desktop) {
+                margin-right: 8rem;
+                width: 20%;
             }
         }
     }
